--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/server/server.js",
     "dev": "nodemon",
     "build": "tsc",
-    "prestart": "npm run build"
+    "prestart": "npm run build",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
