--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
   "homepage": "https://github.com/ramziosta/sequelizeJWT#readme",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.12",
     "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
